fix: 依存度を低くするためファイル名を変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,33 @@
 services:
   db:
     image: mysql:8.0.38
-    container_name: poke-quick-db
+    container_name: database-container
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: sampledb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: masterball
+      MYSQL_DATABASE: pokemon
+      MYSQL_USER: satoshi
+      MYSQL_PASSWORD: pikachu
     volumes:
       - db_data:/var/lib/mysql
-      - ./poke-quick-db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database-db/pokemon_data.csv:/docker-entrypoint-initdb.d/pokemon_data.csv
     ports:
       - "3306:3306"
 
   backend:
-    build: ./poke-quick-back
-    container_name: poke-quick-backend
+    build: ./backend
+    container_name: backend-container
     ports:
       - "8080:8080"
     volumes:
-      - ./poke-quick-back:/app
+      - ./backend:/app
     command: ["go", "run", "main.go"]
     depends_on:
       - db
 
   frontend:
-    build: ./poke-quick-front
-    container_name: poke-quick-frontend
+    build: ./frontend
+    container_name: frontend-container
     ports:
       - "3000:3000"
     depends_on:
