--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ services:
     image: mysql:8.0.38
     container_name: database-container
     environment:
-      MYSQL_ROOT_PASSWORD: masterball
-      MYSQL_DATABASE: pokemon
-      MYSQL_USER: satoshi
-      MYSQL_PASSWORD: pikachu
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: sampledb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./database-db/pokemon_data.csv:/docker-entrypoint-initdb.d/pokemon_data.csv
+      - ./poke-quick-db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
 
