--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
-    image: mysql:8.0.38
-    container_name: database-container
+    build: ./database
+    container_name: poke_quick_database
     environment:
       MYSQL_DATABASE: poke_quick_db
       MYSQL_USER: satoshi
@@ -9,7 +9,10 @@ services:
       MYSQL_ROOT_PASSWORD: masterball
     volumes:
       - db_data:/var/lib/mysql
-      - ./poke-quick-db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database/pokemon_data.csv:/docker-entrypoint-initdb.d/pokemon_data.csv
+      - ./database/config/my.cnf:/etc/mysql/conf.d/my.cnf
+    entrypoint: /bin/bash -c "chmod 644 /etc/mysql/conf.d/my.cnf && chown mysql:mysql /etc/mysql/conf.d/my.cnf && docker-entrypoint.sh mysqld"
     ports:
       - "3306:3306"
 
